--- a/package.json
+++ b/package.json
@@ -12,33 +12,32 @@
     "check-whatsapp-version": "node scripts/check-whatsapp-version.js",
     "test-whatsapp-connection": "node scripts/test-whatsapp-connection.js",
     "prepare-for-github": "node scripts/prepare-for-github.js",
-    "run-sql-migrations": "node scripts/run-sql-migrations.js",
     "check-database-structure": "node scripts/check-database-structure.js",
     "test-admin-pages": "node scripts/test-admin-pages.js"
   },
   "dependencies": {
     "@hapi/boom": "^10.0.1",
-    "@whiskeysockets/baileys": "^6.7.35",
+    "@whiskeysockets/baileys": "^7.0.0-rc.6",
     "axios": "^1.6.7",
     "bcrypt": "^6.0.0",
-    "body-parser": "^1.20.2",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "exceljs": "^4.4.0",
-    "express": "^4.18.2",
+    "express": "^5.1.0",
     "express-session": "^1.18.2",
     "geolib": "^3.3.4",
-    "helmet": "^7.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "midtrans-client": "^1.4.3",
     "multer": "^2.0.1",
-    "mysql2": "^3.9.7",
-    "node-cron": "^3.0.3",
+    "mysql2": "^3.15.3",
+    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "node-routeros": "^1.6.9",
-    "pino": "^8.11.0",
+    "pino": "^10.1.0",
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.1.7",
     "supertest": "^7.1.4",
@@ -49,7 +48,7 @@
   "devDependencies": {
     "ejs-lint": "^2.0.1",
     "nodemon": "^3.1.10",
-    "eslint": "^8.57.0"
+    "eslint": "^9.38.0"
   },
   "engines": {
     "node": ">=14.0.0",
